docs(angular): ksd-checkbox needs a type

--- a/packages/angular/src/components/checkbox/checkbox.mdx
+++ b/packages/angular/src/components/checkbox/checkbox.mdx
@@ -34,17 +34,17 @@ import {
 
     <ksd-field>
     <ksd-label> E-post </ksd-label>
-    <input ksd-checkbox value="e-post"  />
+    <input ksd-checkbox type="checkbox" value="e-post"  />
     </ksd-field>
 
     <ksd-field>
     <ksd-label> Telefon </ksd-label>
-    <input ksd-checkbox value="telefon"  />
+    <input ksd-checkbox type="checkbox" value="telefon"  />
     </ksd-field>
 
     <ksd-field>
     <ksd-label> SMS </ksd-label>
-    <input ksd-checkbox value="sms"  />
+    <input ksd-checkbox type="checkbox" value="sms"  />
     </ksd-field>
 
 </fieldset>
