chore(angular): use customtheme for storybook

--- a/packages/angular/src/components/checkbox/checkbox.mdx
+++ b/packages/angular/src/components/checkbox/checkbox.mdx
@@ -12,7 +12,7 @@ Vi bruker `Checkbox` for å gi brukerne valg, der de kan velge ett eller flere a
 
 ## Bruk
 
-```ts
+```tsx
 import {
   Checkbox,
   Field,
