feat(angular): support more inputs (#21)
Co-authored-by: Øystein Børslid Haugsdal <oystha@gmail.com>

--- a/packages/angular/src/components/checkbox/checkbox.mdx
+++ b/packages/angular/src/components/checkbox/checkbox.mdx
@@ -14,7 +14,7 @@ Vi bruker `Checkbox` for å gi brukerne valg, der de kan velge ett eller flere a
 
 ```tsx
 import {
-  Checkbox,
+  Input,
   Field,
   Fieldset,
   FieldsetDescription,
@@ -34,17 +34,17 @@ import {
 
     <ksd-field>
     <ksd-label> E-post </ksd-label>
-    <input ksd-checkbox type="checkbox" value="e-post"  />
+    <input ksd-input type="checkbox" value="e-post"  />
     </ksd-field>
 
     <ksd-field>
     <ksd-label> Telefon </ksd-label>
-    <input ksd-checkbox type="checkbox" value="telefon"  />
+    <input ksd-input type="checkbox" value="telefon"  />
     </ksd-field>
 
     <ksd-field>
     <ksd-label> SMS </ksd-label>
-    <input ksd-checkbox type="checkbox" value="sms"  />
+    <input ksd-input type="checkbox" value="sms"  />
     </ksd-field>
 
 </fieldset>
