ci: husky, lint-staged setup (#23)

--- a/packages/angular/src/components/checkbox/checkbox.mdx
+++ b/packages/angular/src/components/checkbox/checkbox.mdx
@@ -22,30 +22,28 @@ import {
   Label,
   ValidationMessage,
 } from '@ks-digital/designsystem-angular'
-
-<fieldset ksd-fieldset>
-    <legend ksd-fieldset-legend>
+;<fieldset ksd-fieldset>
+  <legend ksd-fieldset-legend>
     Hvordan vil du helst at vi skal kontakte deg?
-    </legend>
+  </legend>
 
-    <p ksd-fieldset-description>
+  <p ksd-fieldset-description>
     Velg alle alternativene som er relevante for deg.
-    </p>
+  </p>
 
-    <ksd-field>
+  <ksd-field>
     <ksd-label> E-post </ksd-label>
-    <input ksd-input type="checkbox" value="e-post"  />
-    </ksd-field>
+    <input ksd-input type="checkbox" value="e-post" />
+  </ksd-field>
 
-    <ksd-field>
+  <ksd-field>
     <ksd-label> Telefon </ksd-label>
-    <input ksd-input type="checkbox" value="telefon"  />
-    </ksd-field>
+    <input ksd-input type="checkbox" value="telefon" />
+  </ksd-field>
 
-    <ksd-field>
+  <ksd-field>
     <ksd-label> SMS </ksd-label>
-    <input ksd-input type="checkbox" value="sms"  />
-    </ksd-field>
-
+    <input ksd-input type="checkbox" value="sms" />
+  </ksd-field>
 </fieldset>
 ```
