chore(angular): controls for input and checkbox stories

--- a/packages/angular/src/components/input/input.mdx
+++ b/packages/angular/src/components/input/input.mdx
@@ -1,4 +1,10 @@
-import { Meta, Primary, Controls, Story } from '@storybook/addon-docs/blocks'
+import {
+  Meta,
+  Primary,
+  Controls,
+  Canvas,
+  Story,
+} from '@storybook/addon-docs/blocks'
 
 import * as InputStories from './input.stories'
 
@@ -9,3 +15,4 @@ import * as InputStories from './input.stories'
 Input er et skjemaelement for å samle inn brukerdata. Det tilbyr grunnleggende funksjonalitet og er ideell når du trenger full kontroll over komponentens oppsett og validering, noe som gjør det ideelt for bygging av spesialtilpassede elementer.
 
 <Primary />
+<Controls />
