--- a/packages/angular/src/components/checkbox/checkbox.mdx
+++ b/packages/angular/src/components/checkbox/checkbox.mdx
@@ -9,6 +9,7 @@ import * as CheckboxStories from './checkbox.stories'
 Vi bruker `Checkbox` for å gi brukerne valg, der de kan velge ett eller flere alternativer. Brukerne kan både velge og oppheve valgene de gjør. Bruk [`Fieldset`](#fieldset) til å gruppere flere valg.
 
 <Primary />
+<Controls />
 
 ## Bruk
 
@@ -22,6 +23,7 @@ import {
   Label,
   ValidationMessage,
 } from '@ks-digital/designsystem-angular'
+
 ;<fieldset ksd-fieldset>
   <legend ksd-fieldset-legend>
     Hvordan vil du helst at vi skal kontakte deg?
