feat(angular): support error states for input

--- a/packages/angular/src/components/field/field.mdx
+++ b/packages/angular/src/components/field/field.mdx
@@ -26,7 +26,6 @@ import {
   Label,
   Input,
 } from '@ks-digital/designsystem-angular'
-
 ;<ksd-field>
   <ksd-label>Kort beskrivelse</ksd-label>
   <input ksd-input type="text" />
@@ -36,6 +35,6 @@ import {
 
 ## Feilmeldinger
 
-Bruk `<ksd-error>` for å sette en feilmelding. Du må selv kontrollere når disse skal vises eller skjules.
+Bruk `<ksd-error>` for å sette en feilmelding. Du må selv kontrollere når disse skal vises eller skjules. Det er tillatt å vise flere fielmeldinger av gangen.
 
 <Canvas of={FieldStories.Error} />
