docs(angular): storybook controls++ (#24)

--- a/packages/angular/src/components/checkbox/checkbox.mdx
+++ b/packages/angular/src/components/checkbox/checkbox.mdx
@@ -9,6 +9,7 @@ import * as CheckboxStories from './checkbox.stories'
 Vi bruker `Checkbox` for å gi brukerne valg, der de kan velge ett eller flere alternativer. Brukerne kan både velge og oppheve valgene de gjør. Bruk [`Fieldset`](#fieldset) til å gruppere flere valg.
 
 <Primary />
+<Controls />
 
 ## Bruk
 
