fix(angular): button icons are not supported yet

--- a/packages/angular/src/components/button/button.mdx
+++ b/packages/angular/src/components/button/button.mdx
@@ -10,3 +10,7 @@ Knappar lèt brukarane utføre handlingar.
 
 <Primary />
 <Controls />
+
+## Ikoner
+
+Ikoner er ikke støttet enda; trengs diskusjon.
