--- a/packages/angular/src/components/button/button.mdx
+++ b/packages/angular/src/components/button/button.mdx
@@ -13,4 +13,12 @@ Knappar lèt brukarane utføre handlingar.
 
 ## Ikoner
 
-Ikoner er ikke støttet enda; trengs diskusjon.
+Bruk `ksd-icon` med et ikon fra ['Material Icons'](https://fonts.google.com/icons). Alle ikon er nå av type rounded med weight 300, grade 200. Vi ser på støtte for flere varianter.
+Se også [`Icons`](/docs/komponenter-button--icons).
+
+```tsx
+<button ksd-button>
+  <ksd-icon icon="border_color" />
+  Rediger
+</button>
+```
