chore(angular): wip new icon aproach

--- a/packages/angular/src/components/button/button.mdx
+++ b/packages/angular/src/components/button/button.mdx
@@ -18,7 +18,7 @@ Se også [`Icons`](/docs/komponenter-button--icons).
 
 ```tsx
 <button ksd-button>
-  <ksd-icon icon="border_color" />
+  <ksd-icon />
   Rediger
 </button>
 ```
