--- a/packages/angular/src/components/button/button.mdx
+++ b/packages/angular/src/components/button/button.mdx
@@ -13,13 +13,39 @@ Knappar lèt brukarane utføre handlingar.
 
 ## Ikoner
 
-Hvis du trenger ikoner fra Material Icons så er `unplugin-icons` et godt alternativ å bruke. Eksempel under importerer et ikon som web-component
+Ikonfonter skal helst ikke brukes. [Denne artikkelen](https://www.irigoyen.dev/blog/2021/02/17/stop-using-icon-fonts/) oppsummerer godt hvorfor.
+
+`unplugin-icons` er et bibliotek som kan brukes for SVG-ikoner. Pakken støtter alle ikonene fra [Iconify](https://icon-sets.iconify.design/), som er en samling av over 200k ikonsett, inkludert Material Symbols.
+Den enkleste måten å få til dette i Angular er hvis appen din bygges med `vite` og [vite-plugin-angular](https://www.npmjs.com/package/@analogjs/vite-plugin-angular).
+
+Etter at dette er satt, installer pakkene `unplugin-icons` og det ikonsettet du trenger fra Iconify, f.eks Material Symbols:
+
+`pnpm install unplugin-icons @iconify-json/material-symbols`
+
+Legg til som plugin i Vite config.
+
+```(ts)
+import Icons from 'unplugin-icons/vite'
+export default defineConfig({
+  plugins: [
+    Icons({
+      compiler: 'web-components',
+      webComponents: {
+        autoDefine: true,
+      },
+    }),
+  ],
+}
+```
+
+Du skal nå ha tilgang til alle ikonene fra Material Symbols som web-componenter:
+
 fra Material Symbols.
 
 ```tsx
-import '~icons/material-symbols/edit'
+import '~icons/material-symbols/edit-rounded'
 ;<button ksd-button>
-  <icon-material-symbols-edit aria-hidden />
+  <icon-material-symbols-edit-rounded aria-hidden />
   Rediger
 </button>
 ```
