docs(angular): icons

--- a/packages/angular/src/components/button/button.mdx
+++ b/packages/angular/src/components/button/button.mdx
@@ -50,7 +50,7 @@ import '~icons/material-symbols/edit-rounded'
 
 ### Egne ikoner
 
-Knappen støtter også egne SVG-ikoner.
+Du kan også bruke SVG-markup direkte, f.eks hvis du har egne ikoner.
 
 ```tsx
 <button ksd-button>
