docs(angular): update docs

--- a/packages/angular/src/components/button/button.mdx
+++ b/packages/angular/src/components/button/button.mdx
@@ -15,6 +15,8 @@ Knappar lèt brukarane utføre handlingar.
 
 Ikonfonter skal helst ikke brukes. [Denne artikkelen](https://www.irigoyen.dev/blog/2021/02/17/stop-using-icon-fonts/) oppsummerer godt hvorfor.
 
+I prinsippet støtter knappen de ikonene du måtte velge å sende inn.
+
 `unplugin-icons` er et bibliotek som kan brukes for SVG-ikoner. Pakken støtter alle ikonene fra [Iconify](https://icon-sets.iconify.design/), som er en samling av over 200k ikonsett, inkludert Material Symbols.
 Den enkleste måten å få til dette i Angular er hvis appen din bygges med `vite` og [vite-plugin-angular](https://www.npmjs.com/package/@analogjs/vite-plugin-angular).
 
