chore(angular): typo
Co-authored-by: Martin Iden Leithaug <martin.leithaug@gmail.com>

--- a/packages/angular/src/components/button/button.mdx
+++ b/packages/angular/src/components/button/button.mdx
@@ -52,7 +52,7 @@ import '~icons/material-symbols/edit-rounded'
 
 ### Egne ikoner
 
-Du kan også bruke SVG-markup direkte, f.eks hvis du har egne ikoner.
+Du kan også bruke SVG-markup direkte, f.eks. hvis du har egne ikoner.
 
 ```tsx
 <button ksd-button>
