--- a/packages/angular/src/components/card/card.mdx
+++ b/packages/angular/src/components/card/card.mdx
@@ -12,5 +12,76 @@ import * as CardStories from './card.stories'
 
 # Card
 
+Med Card kan vi fremheve informasjon eller oppgaver som hører sammen.
+
 <Primary />
 <Controls />
+
+## Bruk
+
+## Bruk
+
+`ksd-card` brukes som direktiv sammen med riktig HTML-tag i din kontekst, f.eks `article`.
+
+```tsx
+<article ksd-card>
+  <h2>Card</h2>
+  <p>
+    Most provide as with carried business are much better more the perfected
+    designer. Writing slightly explain desk unable at supposedly about this
+  </p>
+</article>
+```
+
+## Kodeeksempler
+
+### Liste
+
+En liste med cards i en grid-layout
+
+```tsx
+<ul style="display: grid; grid-template-columns: repeat(2, minmax(0, 1fr)); gap: 1rem;">
+  <li ksd-card>
+    <h2>Item 1</h2>
+    <p>Description</p>
+  </li>
+  <li ksd-card>
+    <h2>Item 2</h2>
+    <p>Description</p>
+  </li>
+  <li ksd-card>
+    <h2>Item 3</h2>
+    <p>Description</p>
+  </li>
+  <li ksd-card>
+    <h2>Item 4</h2>
+    <p>Description</p>
+  </li>
+</ul>
+```
+
+### Navigasjonskort
+
+`Card` kan brukes som navigasjonskort for å ta brukeren videre til en annen side.
+
+#### Kort med lenke i tittel
+
+Dersom kortet skal lenke til en annen side, kan du legge en lenke i kortets tittel. Hele kortet blir da automatisk klikkbart, men skjermlesere får en bedre brukeropplevelse enn dersom hele kortet var en lenke.
+Dette fordi kun lenken istedenfor hele kortets innhold vil bli lest opp ved fokus.
+
+#### Kort som er en lenke
+
+Hele kortet kan bli en lenke ved å bruke anchor-tag som host-element. Dette er nyttig hvis du ønsker at hele kortets innhold skal bli lest opp
+
+### Retningslinjer
+
+`Card` er en fleksibel komponent som brukes til å strukturere og presentere innhold på en tydelig og visuelt avgrenset måte. Kortet kan inneholde ulike typer innhold, som tekst, media og lenker, og brukes ofte i oversikter, navigasjon eller for å fremheve enkeltemner.
+
+#### Passer til:
+
+- Å gruppere innhold eller funksjonalitet som du vil skille ut fra resten av innholdet.
+
+#### Passer ikke til:
+
+- Å vise lange tekstblokker eller detaljerte forklaringer.
+- Viktige meldinger som bør presenteres som varsler (bruk heller Alert).
