feat(angular): card wip

--- a/packages/angular/src/components/card/card.mdx
+++ b/packages/angular/src/components/card/card.mdx
@@ -19,17 +19,13 @@ Med Card kan vi fremheve informasjon eller oppgaver som hører sammen.
 
 ## Bruk
 
-## Bruk
-
 `ksd-card` brukes som direktiv sammen med riktig HTML-tag i din kontekst, f.eks `article`.
 
 ```tsx
 <article ksd-card>
-  <h2>Card</h2>
-  <p>
-    Most provide as with carried business are much better more the perfected
-    designer. Writing slightly explain desk unable at supposedly about this
-  </p>
+  <h2 ksd-card-block>Tittel</h2>
+  <p ksd-card-block>Innhold</p>
+  <p ksd-card-block>Valgfri fotnote</p>
 </article>
 ```
 
