chore(angular/details): update storybook example to use ksd-card

--- a/packages/angular/src/components/details/details.mdx
+++ b/packages/angular/src/components/details/details.mdx
@@ -21,12 +21,12 @@ Med `Details` kan du presentera mykje innhald på liten plass i ei eller fleire 
 
 /* Med ramme */
 
-<div class="ds-card">
+<article ksd-card>
   <ksd-details>
     <ksd-details-summary>Vedlegg</ksd-details-summary>
     <ksd-details-content>Vedlegg 1, vedlegg 2, vedlegg 3</ksd-details-content>
   </ksd-details>
-</div>
+</article>
 ```
 
 ## Kodeeksempler
