feat(angular): add story for switch component

--- a/packages/angular/src/components/switch/switch.mdx
+++ b/packages/angular/src/components/switch/switch.mdx
@@ -32,7 +32,7 @@ Bruk `Fieldset`for å gruppere fler `Switch`-komponenter sammen
 
 Plasser `label` etter `input` for å plassere `Switch` til høyre side av ledeteksten hvis du trenger det.
 
-<Canvas of={SwitchStories.RightJusted} />
+<Canvas of={SwitchStories.RightAligned} />
 
 ## Retningslinjer
 
