fix(angular): fixed typos in switch component

--- a/packages/angular/src/components/switch/switch.mdx
+++ b/packages/angular/src/components/switch/switch.mdx
@@ -6,7 +6,7 @@ import * as SwitchStories from './switch.stories'
 
 # Switch
 
-`Switch` brukes til å gi brukeren et valg mellom to alternativer. Bryteren kan enten slås av eller på og skal alltid være innstilt med etr standardvalg
+`Switch` brukes til å gi brukeren et valg mellom to alternativer. Bryteren kan enten slås av eller på og skal alltid være innstilt med et standardvalg
 
 <Primary />
 <Controls />
@@ -16,13 +16,13 @@ import * as SwitchStories from './switch.stories'
 ```html
 <ksd-field>
   <ksd-label>Min switch</ksd-label>
-  <input ksd-input" type="checkbox" role="switch"/>
+  <input ksd-input type="checkbox" role="switch" />
 </ksd-field>
 ```
 
 ## Kodeeksempler
 
-**Gurppering**
+**Gruppering**
 
 Bruk `Fieldset`for å gruppere fler `Switch`-komponenter sammen
 
