docs(angular): update examples to use phosphor icons

--- a/packages/angular/src/components/button/button.mdx
+++ b/packages/angular/src/components/button/button.mdx
@@ -13,11 +13,8 @@ Knappar lèt brukarane utføre handlingar.
 
 ## Ikoner
 
-Ikonfonter skal helst ikke brukes. [Denne artikkelen](https://www.irigoyen.dev/blog/2021/02/17/stop-using-icon-fonts/) oppsummerer godt hvorfor.
-
-I prinsippet støtter knappen de ikonene du måtte velge å sende inn.
-
-For Angular så er [Ng Icons](https://ng-icons.github.io/ng-icons) et bibliotek som kan brukes. Pakken støtter over 96k opensource ikoner.
+- [Unngå å bruke ikonfonter](https://www.irigoyen.dev/blog/2021/02/17/stop-using-icon-fonts/).
+- For Angular kan du bruke [Ng Icons](https://ng-icons.github.io/ng-icons), et bibliotek som inneholder ikoner fra Phosphor Icons og Material Icons – de to ikonsettene vi offisielt støtter i våre løsninger.
 
 ### Egne ikoner
 
