fix(angular/search): made ksd-search its own component and updated usage

--- a/packages/angular/src/components/search/search.mdx
+++ b/packages/angular/src/components/search/search.mdx
@@ -26,11 +26,11 @@ import {
   SearchClear,
   SearchButton,
 } from '@ks-digital/designsystem-angular'
-;<div ksd-search>
+;<ksd-search>
   <input ksd-search-input />
   <button ksd-search-clear></button>
   <button ksd-search-button></button>
-</div>
+</ksd-search>
 ```
 
 ## Kontrollert
