docs(angular): update import paths to new entrypoint

--- a/packages/angular/forms/src/checkbox/checkbox.mdx
+++ b/packages/angular/forms/src/checkbox/checkbox.mdx
@@ -21,8 +21,8 @@ import {
   FieldsetDescription,
   FieldsetLegend,
   Label,
-  ValidationMessage,
-} from '@ks-digital/designsystem-angular'
+} from '@ks-digital/designsystem-angular/forms'
+import { ValidationMessage } from '@ks-digital/designsystem-angular/forms'
 ;<fieldset ksd-fieldset>
   <legend ksd-fieldset-legend>
     Hvordan vil du helst at vi skal kontakte deg?
