chore: remove custom implementation

--- a/packages/angular/tabs/src/tabs.mdx
+++ b/packages/angular/tabs/src/tabs.mdx
@@ -29,15 +29,9 @@ import {
 } from '@ks-digital/designsystem-angular'
 ;<ksd-tabs defaultValue="value1">
   <ksd-tabs-list>
-    <button ksd-button ksd-tabs-tab value="value1">
-      Tab 1
-    </button>
-    <button ksd-tabs-tab value="value2">
-      Tab 2
-    </button>
-    <button ksd-tabs-tab value="value3">
-      Tab 3
-    </button>
+    <ksd-tabs-tab value="value1">Tab 1</ksd-tabs-tab>
+    <ksd-tabs-tab value="value2">Tab 2</ksd-tabs-tab>
+    <ksd-tabs-tab value="value3">Tab 3</ksd-tabs-tab>
   </ksd-tabs-list>
   <ksd-tabs-panel value="value1">content 1</ksd-tabs-panel>
   <ksd-tabs-panel value="value2">content 2</ksd-tabs-panel>
