--- a/packages/angular/pagination/src/pagination.mdx
+++ b/packages/angular/pagination/src/pagination.mdx
@@ -12,16 +12,16 @@ import * as PaginationStories from './pagination.stories'
 
 # Pagination
 
-Pagination er en liste med knapper som brukes for å navigere mellom ulike sider med innhold, for eksempel søkeresultater eller tabeller.
+Pagination er en liste med knapper eller lenker som brukes for å navigere mellom ulike sider med innhold, for eksempel søkeresultater eller tabeller.
 
 <Primary />
 <Controls />
 
 ## Bruk
 
-```html
-import { Button } from '@ks-digital/designsystem-angular/button' import {
-Pagination } from '@ks-digital/designsystem-angular/pagination'
+```ts
+import { Button } from '@ks-digital/designsystem-angular/button'
+import { Pagination } from '@ks-digital/designsystem-angular/pagination'
 
 <nav ksd-pagination aria-label="Sidenavigering">
   <ul>
