fix(link): use new hostdirectives. fix storybook controls

--- a/packages/angular/link/src/link.mdx
+++ b/packages/angular/link/src/link.mdx
@@ -14,7 +14,8 @@ import * as LinkStories from './link.stories'
 
 `Link` er klikkbar tekst eller grafikk, som gjør det enkelt for brukerne å navigere til filer eller sider internt eller eksternt. Komponenten er basert på [anchor HTML-taggen (mozilla.org)](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a).
 
-<Canvas of={LinkStories.Preview} />
+<Primary />
+<Controls />
 
 ## Bruk
 
