docs(breadcrumbs): add accessibility guidelines for aria attributes

--- a/packages/angular/breadcrumbs/src/breadcrumbs.mdx
+++ b/packages/angular/breadcrumbs/src/breadcrumbs.mdx
@@ -16,3 +16,6 @@ import * as BreadcrumbsStories from './breadcrumbs.stories'
 <Controls />
 
 ## Bruk
+
+- Husk å sette `aria-current="page"` på den nåværende siden.
+- Husk å sette `aria-label` på breadcrumbs-området.
