--- a/packages/angular/errorsummary/src/errorsummary.mdx
+++ b/packages/angular/errorsummary/src/errorsummary.mdx
@@ -12,10 +12,45 @@ import * as ErrorSummaryStories from './errorsummary.stories'
 
 # ErrorSummary
 
+`ErrorSummary` er en oppsummering av feil. Den gir brukeren oversikt over feil eller mangler som må rettes på en side eller trinn, for å komme videre.
+
 <Primary />
 <Controls />
 
 ## Bruk
 
-- Husk å sette `aria-current="page"` på den nåværende siden.
-- Husk å sette `aria-label` på errorsummary-området.
+```html
+<div ksd-errorsummary tabindex="-1" aria-labelledby="error-heading">
+  <h2 class="ds-heading" id="error-heading">
+    For å gå videre må du rette opp følgende feil:
+  </h2>
+  <ul class="ds-list">
+    <li>
+      <a ksd-link data-color="neutral" href="#field-id">
+        Feilmelding som matcher feltets feilmelding
+      </a>
+    </li>
+  </ul>
+</div>
+```
+
+## Retningslinjer og eksempler
+
+For utfyllende retningslinjer, tilgjengelighetsinformasjon og flere eksempler, se [ErrorSummary på designsystemet.no](https://designsystemet.no/no/components/docs/error-summary/overview).
+
+### Viktige punkter
+
+- Bruk `ErrorSummary` når et skjema har mange felt hvor det kan være vanskelig å få oversikt over feilene
+- Vis komponenten først når brukeren prøver å sende inn skjemaet
+- Komponenten skal få fokus når den vises (bruk `tabindex="-1"`)
+- Bruk `aria-labelledby` som peker til overskriftens ID
+- Feilmeldingene skal lenke direkte til feltet med feil
+- Feilmeldingene i oppsummeringen skal være formulert likt som feilmeldingen ved feltet
+
+## Kodeeksempler
+
+### Med skjema
+
+Se "WithForm" story for et komplett eksempel med skjemafelt og ErrorSummary.
+
+<Canvas of={ErrorSummaryStories.WithForm} />
