rename files 'errorsummary' -> 'error-summary'

--- a/packages/angular/errorsummary/src/error-summary.mdx
+++ b/packages/angular/errorsummary/src/error-summary.mdx
@@ -6,7 +6,7 @@ import {
   Story,
 } from '@storybook/addon-docs/blocks'
 
-import * as ErrorSummaryStories from './errorsummary.stories'
+import * as ErrorSummaryStories from './error-summary.stories'
 
 <Meta of={ErrorSummaryStories} />
 
@@ -20,7 +20,7 @@ import * as ErrorSummaryStories from './errorsummary.stories'
 ## Bruk
 
 ```html
-<div ksd-errorsummary tabindex="-1" aria-labelledby="error-heading">
+<div ksd-error-summary tabindex="-1" aria-labelledby="error-heading">
   <h2 class="ds-heading" id="error-heading">
     For å gå videre må du rette opp følgende feil:
   </h2>
