refactor(breadcrumbs): use ds-breadcrumbs

--- a/packages/angular/breadcrumbs/src/breadcrumbs.mdx
+++ b/packages/angular/breadcrumbs/src/breadcrumbs.mdx
@@ -17,5 +17,5 @@ import * as BreadcrumbsStories from './breadcrumbs.stories'
 
 ## Bruk
 
-- Husk å sette `aria-current="page"` på den nåværende siden.
 - Husk å sette `aria-label` på breadcrumbs-området.
+- `aria-current="page"` trenger du ikke sette. Den blir automatisk satt på siste element.
