--- a/packages/angular/pagination/src/pagination.mdx
+++ b/packages/angular/pagination/src/pagination.mdx
@@ -17,9 +17,16 @@ Pagination er en wrapper for `ds-pagination` web-componenten fra Designsystemet 
 <Primary />
 <Controls />
 
-## Bruk med buttons
+## Bruk
 
-Du kan bruke `pages`-signalet som komponenten gir for å rendre sidene du vil vise. Reagerer på sideklikk med `onPageClicked`-eventen.
+- Du kan bruke `pages`-signalet som komponenten gir for å rendre sidene du vil vise.
+- Lytt til `pageClicked`-eventen for å håndtere sideklikk.
+- Utfylling av sidetall og ellipsis håndteres av komponenten, så du behøver ikke fylle ut dette selv.
+- Komponenten har satt role til `navigation`, så ikke wrap den i en nav-tag, da dette vil skape dupliserte navigasjonsregioner.
+- Komponenten setter `aria-current` og styler knappene for gjeldende side, så du trenger ikke håndtere dette selv.
+  - Hvis du skriver sidetall selv, så får du ellipsis ved å lage et tomt element, f.eks: `<button ksdPaginationButton>{{page.page || ''}}</button>`
+
+## Med knapper
 
 ```ts
 import { Button } from '@ks-digital/designsystem-angular/button'
