docs(breadcrumbs): add note about role and nav-tag wrapping

--- a/packages/angular/breadcrumbs/src/breadcrumbs.mdx
+++ b/packages/angular/breadcrumbs/src/breadcrumbs.mdx
@@ -19,3 +19,4 @@ import * as BreadcrumbsStories from './breadcrumbs.stories'
 
 - Husk å sette `aria-label` på breadcrumbs-området.
 - `aria-current="page"` trenger du ikke sette. Den blir automatisk satt på siste element.
+- Komponenten har satt role til `navigation`, så ikke wrap den i en nav-tag.
